# filter-core/api/v1/rule.pb.go
@@ -1,378 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.35.1
-// 	protoc        v5.27.3
-// source: api/v1/rule.proto
-
-package v1
-
-import (
-	_ "google.golang.org/genproto/googleapis/api/annotations"
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type AddRuleReq struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Name             string          `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
-	DmType           int64           `protobuf:"varint,2,opt,name=dm_type,proto3" json:"dm_type,omitempty"`
-	MatcherParamList []*MatcherParam `protobuf:"bytes,3,rep,name=matcher_param_list,proto3" json:"matcher_param_list,omitempty"`
-	ActionIdList     []string        `protobuf:"bytes,4,rep,name=action_id_list,proto3" json:"action_id_list,omitempty"`
-}
-
-func (x *AddRuleReq) Reset() {
-	*x = AddRuleReq{}
-	mi := &file_api_v1_rule_proto_msgTypes[0]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *AddRuleReq) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AddRuleReq) ProtoMessage() {}
-
-func (x *AddRuleReq) ProtoReflect() protoreflect.Message {
-	mi := &file_api_v1_rule_proto_msgTypes[0]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AddRuleReq.ProtoReflect.Descriptor instead.
-func (*AddRuleReq) Descriptor() ([]byte, []int) {
-	return file_api_v1_rule_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *AddRuleReq) GetName() string {
-	if x != nil {
-		return x.Name
-	}
-	return ""
-}
-
-func (x *AddRuleReq) GetDmType() int64 {
-	if x != nil {
-		return x.DmType
-	}
-	return 0
-}
-
-func (x *AddRuleReq) GetMatcherParamList() []*MatcherParam {
-	if x != nil {
-		return x.MatcherParamList
-	}
-	return nil
-}
-
-func (x *AddRuleReq) GetActionIdList() []string {
-	if x != nil {
-		return x.ActionIdList
-	}
-	return nil
-}
-
-type MatcherParam struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Param     string `protobuf:"bytes,1,opt,name=param,proto3" json:"param,omitempty"`
-	BaseType  int64  `protobuf:"varint,2,opt,name=base_type,proto3" json:"base_type,omitempty"`
-	MatchMode int64  `protobuf:"varint,3,opt,name=match_mode,proto3" json:"match_mode,omitempty"`
-	Value     string `protobuf:"bytes,4,opt,name=value,proto3" json:"value,omitempty"`
-}
-
-func (x *MatcherParam) Reset() {
-	*x = MatcherParam{}
-	mi := &file_api_v1_rule_proto_msgTypes[1]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *MatcherParam) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*MatcherParam) ProtoMessage() {}
-
-func (x *MatcherParam) ProtoReflect() protoreflect.Message {
-	mi := &file_api_v1_rule_proto_msgTypes[1]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use MatcherParam.ProtoReflect.Descriptor instead.
-func (*MatcherParam) Descriptor() ([]byte, []int) {
-	return file_api_v1_rule_proto_rawDescGZIP(), []int{1}
-}
-
-func (x *MatcherParam) GetParam() string {
-	if x != nil {
-		return x.Param
-	}
-	return ""
-}
-
-func (x *MatcherParam) GetBaseType() int64 {
-	if x != nil {
-		return x.BaseType
-	}
-	return 0
-}
-
-func (x *MatcherParam) GetMatchMode() int64 {
-	if x != nil {
-		return x.MatchMode
-	}
-	return 0
-}
-
-func (x *MatcherParam) GetValue() string {
-	if x != nil {
-		return x.Value
-	}
-	return ""
-}
-
-type AddRuleResp struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-}
-
-func (x *AddRuleResp) Reset() {
-	*x = AddRuleResp{}
-	mi := &file_api_v1_rule_proto_msgTypes[2]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *AddRuleResp) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*AddRuleResp) ProtoMessage() {}
-
-func (x *AddRuleResp) ProtoReflect() protoreflect.Message {
-	mi := &file_api_v1_rule_proto_msgTypes[2]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use AddRuleResp.ProtoReflect.Descriptor instead.
-func (*AddRuleResp) Descriptor() ([]byte, []int) {
-	return file_api_v1_rule_proto_rawDescGZIP(), []int{2}
-}
-
-type DelRuleReq struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	RuleId string `protobuf:"bytes,1,opt,name=rule_id,proto3" json:"rule_id,omitempty"`
-}
-
-func (x *DelRuleReq) Reset() {
-	*x = DelRuleReq{}
-	mi := &file_api_v1_rule_proto_msgTypes[3]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *DelRuleReq) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*DelRuleReq) ProtoMessage() {}
-
-func (x *DelRuleReq) ProtoReflect() protoreflect.Message {
-	mi := &file_api_v1_rule_proto_msgTypes[3]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use DelRuleReq.ProtoReflect.Descriptor instead.
-func (*DelRuleReq) Descriptor() ([]byte, []int) {
-	return file_api_v1_rule_proto_rawDescGZIP(), []int{3}
-}
-
-func (x *DelRuleReq) GetRuleId() string {
-	if x != nil {
-		return x.RuleId
-	}
-	return ""
-}
-
-type DelRuleResp struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-}
-
-func (x *DelRuleResp) Reset() {
-	*x = DelRuleResp{}
-	mi := &file_api_v1_rule_proto_msgTypes[4]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *DelRuleResp) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*DelRuleResp) ProtoMessage() {}
-
-func (x *DelRuleResp) ProtoReflect() protoreflect.Message {
-	mi := &file_api_v1_rule_proto_msgTypes[4]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use DelRuleResp.ProtoReflect.Descriptor instead.
-func (*DelRuleResp) Descriptor() ([]byte, []int) {
-	return file_api_v1_rule_proto_rawDescGZIP(), []int{4}
-}
-
-var File_api_v1_rule_proto protoreflect.FileDescriptor
-
-var file_api_v1_rule_proto_rawDesc = []byte{
-	0x0a, 0x11, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x72, 0x75, 0x6c, 0x65, 0x2e, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x12, 0x02, 0x76, 0x31, 0x1a, 0x1c, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f,
-	0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74, 0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xa4, 0x01, 0x0a, 0x0a, 0x41, 0x64, 0x64, 0x52, 0x75, 0x6c,
-	0x65, 0x52, 0x65, 0x71, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x18, 0x0a, 0x07, 0x64, 0x6d, 0x5f, 0x74,
-	0x79, 0x70, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07, 0x64, 0x6d, 0x5f, 0x74, 0x79,
-	0x70, 0x65, 0x12, 0x40, 0x0a, 0x12, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x65, 0x72, 0x5f, 0x70, 0x61,
-	0x72, 0x61, 0x6d, 0x5f, 0x6c, 0x69, 0x73, 0x74, 0x18, 0x03, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x10,
-	0x2e, 0x76, 0x31, 0x2e, 0x4d, 0x61, 0x74, 0x63, 0x68, 0x65, 0x72, 0x50, 0x61, 0x72, 0x61, 0x6d,
-	0x52, 0x12, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x65, 0x72, 0x5f, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x5f,
-	0x6c, 0x69, 0x73, 0x74, 0x12, 0x26, 0x0a, 0x0e, 0x61, 0x63, 0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69,
-	0x64, 0x5f, 0x6c, 0x69, 0x73, 0x74, 0x18, 0x04, 0x20, 0x03, 0x28, 0x09, 0x52, 0x0e, 0x61, 0x63,
-	0x74, 0x69, 0x6f, 0x6e, 0x5f, 0x69, 0x64, 0x5f, 0x6c, 0x69, 0x73, 0x74, 0x22, 0x78, 0x0a, 0x0c,
-	0x4d, 0x61, 0x74, 0x63, 0x68, 0x65, 0x72, 0x50, 0x61, 0x72, 0x61, 0x6d, 0x12, 0x14, 0x0a, 0x05,
-	0x70, 0x61, 0x72, 0x61, 0x6d, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x70, 0x61, 0x72,
-	0x61, 0x6d, 0x12, 0x1c, 0x0a, 0x09, 0x62, 0x61, 0x73, 0x65, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x18,
-	0x02, 0x20, 0x01, 0x28, 0x03, 0x52, 0x09, 0x62, 0x61, 0x73, 0x65, 0x5f, 0x74, 0x79, 0x70, 0x65,
-	0x12, 0x1e, 0x0a, 0x0a, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x5f, 0x6d, 0x6f, 0x64, 0x65, 0x18, 0x03,
-	0x20, 0x01, 0x28, 0x03, 0x52, 0x0a, 0x6d, 0x61, 0x74, 0x63, 0x68, 0x5f, 0x6d, 0x6f, 0x64, 0x65,
-	0x12, 0x14, 0x0a, 0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52,
-	0x05, 0x76, 0x61, 0x6c, 0x75, 0x65, 0x22, 0x0d, 0x0a, 0x0b, 0x41, 0x64, 0x64, 0x52, 0x75, 0x6c,
-	0x65, 0x52, 0x65, 0x73, 0x70, 0x22, 0x26, 0x0a, 0x0a, 0x44, 0x65, 0x6c, 0x52, 0x75, 0x6c, 0x65,
-	0x52, 0x65, 0x71, 0x12, 0x18, 0x0a, 0x07, 0x72, 0x75, 0x6c, 0x65, 0x5f, 0x69, 0x64, 0x18, 0x01,
-	0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x72, 0x75, 0x6c, 0x65, 0x5f, 0x69, 0x64, 0x22, 0x0d, 0x0a,
-	0x0b, 0x44, 0x65, 0x6c, 0x52, 0x75, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x32, 0xa2, 0x01, 0x0a,
-	0x04, 0x52, 0x75, 0x6c, 0x65, 0x12, 0x4c, 0x0a, 0x07, 0x41, 0x64, 0x64, 0x52, 0x75, 0x6c, 0x65,
-	0x12, 0x0e, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x75, 0x6c, 0x65, 0x52, 0x65, 0x71,
-	0x1a, 0x0f, 0x2e, 0x76, 0x31, 0x2e, 0x41, 0x64, 0x64, 0x52, 0x75, 0x6c, 0x65, 0x52, 0x65, 0x73,
-	0x70, 0x22, 0x20, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1a, 0x3a, 0x01, 0x2a, 0x22, 0x15, 0x2f, 0x61,
-	0x70, 0x69, 0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6f, 0x72, 0x65, 0x2f, 0x61, 0x64, 0x64, 0x5f, 0x72,
-	0x75, 0x6c, 0x65, 0x12, 0x4c, 0x0a, 0x07, 0x44, 0x65, 0x6c, 0x52, 0x75, 0x6c, 0x65, 0x12, 0x0e,
-	0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x52, 0x75, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x1a, 0x0f,
-	0x2e, 0x76, 0x31, 0x2e, 0x44, 0x65, 0x6c, 0x52, 0x75, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x22,
-	0x20, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x1a, 0x3a, 0x01, 0x2a, 0x22, 0x15, 0x2f, 0x61, 0x70, 0x69,
-	0x2f, 0x76, 0x31, 0x2f, 0x63, 0x6f, 0x72, 0x65, 0x2f, 0x64, 0x65, 0x6c, 0x5f, 0x72, 0x75, 0x6c,
-	0x65, 0x42, 0x14, 0x5a, 0x12, 0x66, 0x69, 0x6c, 0x74, 0x65, 0x72, 0x2d, 0x63, 0x6f, 0x72, 0x65,
-	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x76, 0x31, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_api_v1_rule_proto_rawDescOnce sync.Once
-	file_api_v1_rule_proto_rawDescData = file_api_v1_rule_proto_rawDesc
-)
-
-func file_api_v1_rule_proto_rawDescGZIP() []byte {
-	file_api_v1_rule_proto_rawDescOnce.Do(func() {
-		file_api_v1_rule_proto_rawDescData = protoimpl.X.CompressGZIP(file_api_v1_rule_proto_rawDescData)
-	})
-	return file_api_v1_rule_proto_rawDescData
-}
-
-var file_api_v1_rule_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
-var file_api_v1_rule_proto_goTypes = []any{
-	(*AddRuleReq)(nil),   // 0: v1.AddRuleReq
-	(*MatcherParam)(nil), // 1: v1.MatcherParam
-	(*AddRuleResp)(nil),  // 2: v1.AddRuleResp
-	(*DelRuleReq)(nil),   // 3: v1.DelRuleReq
-	(*DelRuleResp)(nil),  // 4: v1.DelRuleResp
-}
-var file_api_v1_rule_proto_depIdxs = []int32{
-	1, // 0: v1.AddRuleReq.matcher_param_list:type_name -> v1.MatcherParam
-	0, // 1: v1.Rule.AddRule:input_type -> v1.AddRuleReq
-	3, // 2: v1.Rule.DelRule:input_type -> v1.DelRuleReq
-	2, // 3: v1.Rule.AddRule:output_type -> v1.AddRuleResp
-	4, // 4: v1.Rule.DelRule:output_type -> v1.DelRuleResp
-	3, // [3:5] is the sub-list for method output_type
-	1, // [1:3] is the sub-list for method input_type
-	1, // [1:1] is the sub-list for extension type_name
-	1, // [1:1] is the sub-list for extension extendee
-	0, // [0:1] is the sub-list for field type_name
-}
-
-func init() { file_api_v1_rule_proto_init() }
-func file_api_v1_rule_proto_init() {
-	if File_api_v1_rule_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_api_v1_rule_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   5,
-			NumExtensions: 0,
-			NumServices:   1,
-		},
-		GoTypes:           file_api_v1_rule_proto_goTypes,
-		DependencyIndexes: file_api_v1_rule_proto_depIdxs,
-		MessageInfos:      file_api_v1_rule_proto_msgTypes,
-	}.Build()
-	File_api_v1_rule_proto = out.File
-	file_api_v1_rule_proto_rawDesc = nil
-	file_api_v1_rule_proto_goTypes = nil
-	file_api_v1_rule_proto_depIdxs = nil
-}
