# filter-core/openapi.yaml
@@ -3,43 +3,37 @@
 
 openapi: 3.0.3
 info:
-    title: Rule API
+    title: Setting API
     version: 0.0.1
 paths:
-    /api/v1/core/add_rule:
-        post:
+    /api/v1/setting/get_config:
+        get:
             tags:
-                - Rule
-            operationId: Rule_AddRule
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/AddRuleReq'
-                required: true
+                - Setting
+            operationId: Setting_GetConfig
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/AddRuleResp'
+                                $ref: '#/components/schemas/GetConfigResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /api/v1/core/del_rule:
+    /api/v1/setting/set_config:
         post:
             tags:
-                - Rule
-            operationId: Rule_DelRule
+                - Setting
+            operationId: Setting_SetConfig
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/DelRuleReq'
+                            $ref: '#/components/schemas/SetConfigReq'
                 required: true
             responses:
                 "200":
@@ -47,7 +41,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/DelRuleResp'
+                                $ref: '#/components/schemas/SetConfigResp'
                 default:
                     description: Default error response
                     content:
@@ -56,32 +50,46 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        AddRuleReq:
+        Config:
             type: object
             properties:
-                name:
-                    type: string
-                dm_type:
-                    type: string
-                matcher_param_list:
-                    type: array
-                    items:
-                        $ref: '#/components/schemas/MatcherParam'
-                action_id_list:
-                    type: array
-                    items:
-                        type: string
-        AddRuleResp:
-            type: object
-            properties: {}
-        DelRuleReq:
+                log_conf:
+                    $ref: '#/components/schemas/Config_LogConfig'
+                conn_conf:
+                    $ref: '#/components/schemas/Config_ConnConfig'
+        Config_ConnConfig:
             type: object
             properties:
-                rule_id:
+                force_auth:
+                    type: boolean
+                auth_uid:
                     type: string
-        DelRuleResp:
+                auth_cookie:
+                    type: string
+                heartbeat_interval:
+                    type: string
+        Config_LogConfig:
             type: object
-            properties: {}
+            properties:
+                level:
+                    type: string
+                file_name:
+                    type: string
+                max_size:
+                    type: string
+                max_age:
+                    type: string
+                max_backups:
+                    type: string
+                is_std_out:
+                    type: boolean
+                is_stack_trace:
+                    type: boolean
+        GetConfigResp:
+            type: object
+            properties:
+                conf:
+                    $ref: '#/components/schemas/Config'
         GoogleProtobufAny:
             type: object
             properties:
@@ -90,17 +98,14 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        MatcherParam:
+        SetConfigReq:
             type: object
             properties:
-                param:
-                    type: string
-                base_type:
-                    type: string
-                match_mode:
-                    type: string
-                value:
-                    type: string
+                conf:
+                    $ref: '#/components/schemas/Config'
+        SetConfigResp:
+            type: object
+            properties: {}
         Status:
             type: object
             properties:
@@ -118,4 +123,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Rule
+    - name: Setting
